--- a/Core/Base/BaseCoreLibImpl/build.gradle
+++ b/Core/Base/BaseCoreLibImpl/build.gradle
@@ -1,24 +1,19 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.devtools.ksp'
 }
 
 android {
-    namespace 'ru.personal.development.habits2'
+    namespace 'ru.personal.development.core.base.impl'
     compileSdk 34
 
     defaultConfig {
-        applicationId "ru.personal.development.habits2"
         minSdk 24
         targetSdk 34
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables {
-            useSupportLibrary true
-        }
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -34,25 +29,20 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    packagingOptions {
-        resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
-        }
-    }
 }
 
 dependencies {
-    implementation project(':Feature:Base:BaseLibImpl')
+
+    api project(':Core:Base:BaseCoreLibApi')
 
     implementation 'androidx.core:core-ktx:1.10.1'
-    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
 
     /* dagger */
     ksp "com.google.dagger:dagger-compiler:2.48"
 
     testImplementation 'junit:junit:4.13.2'
-
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
